[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genblaze-openai"
version = "0.2.4"
description = "OpenAI provider adapters for genblaze (Sora, DALL-E, TTS)"
authors = [{name = "Jeronimo De Leon", email = "jdeleon@backblaze.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia",
    "Topic :: Software Development :: Libraries",
]
keywords = ["genblaze", "ai", "media", "manifest", "provenance", "c2pa-ready", "genai", "pipeline", "openai", "sora", "dall-e", "tts", "whisper"]

dependencies = [
    "genblaze-core>=0.2.0,<0.3",
    "openai>=1.0",
]

[project.urls]
Homepage = "https://github.com/backblaze-labs/genblaze"
Documentation = "https://github.com/backblaze-labs/genblaze"
Repository = "https://github.com/backblaze-labs/genblaze"
Issues = "https://github.com/backblaze-labs/genblaze/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.entry-points."genblaze.providers"]
openai-sora = "genblaze_openai:SoraProvider"
openai-dalle = "genblaze_openai:DalleProvider"
openai-tts = "genblaze_openai:OpenAITTSProvider"

[tool.hatch.build.targets.wheel]
packages = ["genblaze_openai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
