[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genblaze-runway"
version = "0.3.2"
description = "Runway Gen video provider adapter for genblaze"
authors = [{name = "Jeronimo De Leon", email = "jdeleon@backblaze.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia",
    "Topic :: Software Development :: Libraries",
]
keywords = ["genblaze", "ai", "media", "manifest", "provenance", "c2pa-ready", "genai", "pipeline", "runway", "gen-4", "video"]

dependencies = [
    "genblaze-core>=0.3.4,<0.4",
    # <5: bounded-major convention (#61). The documented floor (0.6) predates
    # the SDK's current major line — runwayml resolves to 4.x today, so
    # capping at the next major after 0.6 (<1) would reject the version this
    # connector is actually verified against. Capped one major past what's
    # currently verified instead; the floor itself is unchanged here (raising
    # it is a separate, larger fix — see #61 follow-up notes).
    "runwayml>=0.6,<6",
]

[project.urls]
Homepage = "https://github.com/backblaze-labs/genblaze"
Documentation = "https://github.com/backblaze-labs/genblaze"
Repository = "https://github.com/backblaze-labs/genblaze"
Issues = "https://github.com/backblaze-labs/genblaze/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.entry-points."genblaze.providers"]
runway = "genblaze_runway:RunwayProvider"

[tool.hatch.build.targets.wheel]
packages = ["genblaze_runway"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.deptry]
# Treat the `dev` extra as dev-only tooling so deptry does not flag pytest
# (and other test-only deps) as unused declared deps (DEP002).
optional_dependencies_dev_groups = ["dev"]
