[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genblaze-s3"
version = "0.2.4"
description = "S3-compatible storage backend for genblaze (B2, R2, MinIO, AWS)"
authors = [{name = "Jeronimo De Leon", email = "jdeleon@backblaze.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia",
    "Topic :: Software Development :: Libraries",
]
keywords = ["genblaze", "ai", "media", "manifest", "provenance", "c2pa-ready", "genai", "pipeline", "s3", "backblaze", "b2", "storage", "object-storage"]

dependencies = [
    "genblaze-core>=0.1.0,<0.3",
    "boto3>=1.28",
]

[project.urls]
Homepage = "https://github.com/backblaze-labs/genblaze"
Documentation = "https://github.com/backblaze-labs/genblaze"
Repository = "https://github.com/backblaze-labs/genblaze"
Issues = "https://github.com/backblaze-labs/genblaze/issues"

[project.optional-dependencies]
async = [
    # Phase 3 of the storage-backend hardening tranche — native async via
    # aiobotocore-backed aioboto3. Keep the upper bound conservative so
    # an aioboto3 major bump doesn't silently land breaking changes for
    # users with floating extras pins.
    "aioboto3>=12,<13",
]
dev = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["genblaze_s3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
